# ChangeLog for dev-ruby/authlogic-oid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jul 2014; Hans de Graaff <graaff@gentoo.org>
  -authlogic-oid-1.0.4-r1.ebuild, -authlogic-oid-1.0.4-r2.ebuild:
  Cleanup.

  11 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  authlogic-oid-1.0.4-r3.ebuild:
  Upstream source no longer exists, host tgz myself.

  11 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  authlogic-oid-1.0.4-r3.ebuild:
  Drop ruby18 since authlogic itself no longer supports it.

  18 Apr 2012; Hans de Graaff <graaff@gentoo.org>
  authlogic-oid-1.0.4-r3.ebuild:
  Add ruby19, drop x86 because of that.

*authlogic-oid-1.0.4-r3 (05 Nov 2011)

  05 Nov 2011; Hans de Graaff <graaff@gentoo.org>
  +authlogic-oid-1.0.4-r3.ebuild:
  Version bump based on fork by whitequark that actually works with Rails 3.x.

*authlogic-oid-1.0.4-r2 (31 Oct 2011)

  31 Oct 2011; Hans de Graaff <graaff@gentoo.org>
  +authlogic-oid-1.0.4-r2.ebuild,
  +files/authlogic-oid-1.0.4-open_id_authentication.patch:
  Add patch to avoid OpenIdAuthentication code that got removed in later
  versions.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  authlogic-oid-1.0.4-r1.ebuild:
  Keyword ~x86-macos.

  03 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  -authlogic-oid-1.0.4.ebuild:
  Remove old version.

*authlogic-oid-1.0.4-r1 (13 Aug 2010)

  13 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  +authlogic-oid-1.0.4-r1.ebuild:
  Convert to ruby-fakegem.

  24 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  -authlogic-oid-1.0.3.ebuild:
  Remove old version.

*authlogic-oid-1.0.4 (03 Jun 2009)

  03 Jun 2009; Hans de Graaff <graaff@gentoo.org>
  +authlogic-oid-1.0.4.ebuild:
  Version bump that works with authlogic 2.0.13

*authlogic-oid-1.0.3 (19 May 2009)

  19 May 2009; Hans de Graaff <graaff@gentoo.org>
  +authlogic-oid-1.0.3.ebuild, +metadata.xml:
  Initial import.
