@@ -1,11 +1,11 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.3.0.ebuild,v 1.1 2006/08/28 14:34:06 pclouds Exp $
 
 EAPI=4
-USE_RUBY="ruby19"
+USE_RUBY="ruby19 ruby20 ruby21"
 
-RUBY_FAKEGEM_TASK_DOC="docs"
+RUBY_FAKEGEM_RECIPE_DOC="rdoc"
 
 RUBY_FAKEGEM_EXTRADOC="CHANGELOG.rdoc README.rdoc"
 
